--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -2,7 +2,7 @@
   background: url('./../img/pattern-grey-lg.png');
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 4em;
+  padding: 5em 4em;
 
   @include screen--small {
     padding: 4em 2em;
