--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -16,15 +16,24 @@
 
     @include screen--medium {
       position: static;
-      padding-bottom: 6em;
+      padding-bottom: 12em;
       padding-right: 4em;
-      max-width: 100%;
+
+      p {
+        max-width: 500px;
+      }
     }
 
     @include screen--small {
+      padding: 8em 2em 10em 0;
+
+      h1 {
+        margin-top: 0;
+      }
+    }
+
+    @include screen--v-small {
       text-align: center;
-      padding-bottom: 0;
-      padding-right: 2em;
     }
   }
 
@@ -40,7 +49,12 @@
     }
 
     @include screen--medium {
-      display: none;
+      position: absolute;
+      bottom: 0;
+    }
+
+    @include screen--small {
+      height: 400px;
     }
   }
 
@@ -67,8 +81,9 @@
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      max-width: 200px;
-      margin: auto;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
       margin-top: 2em;
     }
   }
