--- a/sass/layout/_how.scss
+++ b/sass/layout/_how.scss
@@ -3,6 +3,10 @@
     display: grid;
     grid-template-columns: 1fr minmax(300px, 1100px) minmax(4em, 1fr);
     margin-top: 6em;
+
+    @include screen--medium {
+      grid-template-columns: 1fr minmax(300px, 1100px) minmax(2em, 1fr);
+    }
   }
 
   h2 {
