--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -19,6 +19,10 @@
 .header-font--v-large {
   font-size: $v-large;
 
+  @include screen--medium {
+    font-size: 3.7rem;
+  }
+
   @include screen--v-small {
     font-size: 3.5rem;
   }
@@ -26,6 +30,7 @@
 
 .header-font--large {
   font-size: $large;
+  margin-top: 0;
 
   @include screen--v-small {
     font-size: 2.5rem;
