--- a/src/sass/layout/_why.scss
+++ b/src/sass/layout/_why.scss
@@ -42,7 +42,7 @@
       width: 100%;
       max-width: 700px;
       text-align: justify;
-      margin-right: 0;
+      margin: 0 auto;
     }
   }
 
